--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -1,224 +1,314 @@
 @media (max-width:1300px) {
-    
+
+    /* section #2 ------------------------ */
+    .section-2-img-container > img {
+        width: 480px;
+    }
 }
 
 @media (max-width:1230px) {
-    .header_wrapper {
-        padding: 10px 50px;
+
+    /* hero section ------------------- */
+    .hero-container {
+        padding: 0 5rem;
     }
-    
-    /* hero section */
-    .hero-top .hero-large-text {
-        font-size: 5rem;
-        line-height: 1;
+    .hero-container .hero-bg-image {
+        width: 550px;
     }
-    .hero-top .hero-small-text {
-        font-size: 2.5rem;
-        line-height: 0.7;
+    .glow {
+        font-size: 4.5rem;
     }
-    .hero-bottom-button {
-        height: 50px;
+    .hero-container .hero-title {
+        font-size: 3rem;
     }
 
-    /* reviews section */
-    .reviews-bottom {
-        width: 80%;
-        gap: 40px;
-        grid-template-columns: repeat(1, 1fr);
+
+    /* section #2 ------------------------ */
+    .section-2-img-container {
+        gap: 50px;
     }
-    .review-card {
-        flex-direction: row;
+    .section-2-img-container > img {
+        width: 400px;
     }
-    .review-card-pfp img {
-        max-width: 90px;
-    }
-    .user-review {
-        text-align: left;
-    }
+
+    /* section #3 ------------------------ */
+    .section-3 {padding: 1.5rem 0;}
+    .section-3-box {width: 90%; padding: 1rem;}
 }
 
 @media (max-width:1070px) {
-    .logo img {
-        height: 45px;
-        width: auto;
+
+    /* nav ----------------------------- */
+    .nav-logo img {
+        width: 45px;
+    }
+    .nav-logo .nav-text {
+        font-size: 14px;
     }
 
-    /* hero section */
-    .hero-section {
-        overflow: hidden;
+    /* hero section ----------------------- */
+    .hero-container .hero-bg-image {
+        width: 500px;
     }
-    .hero-top {
-        left: -20px;
+
+    /* section #5------------------------- */
+    .section-5-left {
+        width: 100%;
+        text-align: center;
+    }
+    .section-5-right {
+        display: none;
+    }
+
+    /* about ------------------------------- */
+    .about { padding: 6rem 1rem; overflow: hidden; }
+    
+    .about-bg1 {
+        top: 250px;
+        right: -50px;
+    }
+    .about-bg2 {
+        left: -50px;
     }
 }
 
 @media (max-width:991px) {
-    .header_wrapper {
-        padding: 10px 20px;
-    }
 
-    /* hero section */
-    .hero-section {
-        align-items: center;
+    /* hero section ----------------------- */
+    .hero-container {
+        padding: 0 4rem;
+        grid-template-columns: 1fr;
+        text-align: center;
     }
-    .hero-bg {
-        height: 700px;
-        width: auto;
+    .hero-container .hero-bg-image {
         display: none;
     }
-    .hero-top {
-        position: inherit;
-        left: inherit;
-        text-align: center;
-        justify-content: center;
+    .hero-text-top {
         align-items: center;
     }
-    .hero-top .hero-large-text {
+    .glow {
+        font-size: 6rem;
+    }
+    .hero-container .hero-title {
         font-size: 4rem;
     }
-    .hero-top .hero-small-text {
-        font-size: 2rem;
+    .hero-container .hero-description {
+        width: 80%;
+        font-size: var(--fs-s);
     }
-    .hero-top .hero-sub-text {
-        text-align: center;
-    }
-    .hero-top .hero-description {
-        text-align: center;
-        padding: 0;
-        width: 100%;
-    }
-    .hero-section .hero-bottom {
-        flex-direction: column;
+    .hero-bottom {
+        justify-content: center;
     }
 
-    /* reviews section */
-    .reviews-header-title {
-        font-size: var(--fs-m);
+    /* section #5 -------------------------- */
+    .section-5 {padding: 0 2rem;}
+    .section-5-title {font-size: var(--fs-m);}
+    .section-5-left p {margin: 0; padding: 0.7rem;}
+
+    /* section #2 -------------------------- */
+    .section-2-img-container {
+        gap: 35px;
     }
-    .reviews-header-description {
-        font-size: var(--fs-s);
-        font-weight: normal;
+    .section-2-img-container > img {
+        width: 350px;
     }
-    .reviews-header {
-        margin-bottom: 1rem;
+    .section-2 h1 {
+        width: 80%;
+        text-align: center;
     }
-    .reviews-bottom {
-        width: 90%;
+
+    /* section #3 -------------------------- */
+    .section-3-box .box-title {
+        font-size: 1.4rem;
     }
+    .section-3-box .box-title i {
+        font-size: 1.3rem;
+    }
+
+    /* section #4 ------------------------ */
+    .section-4 {
+        gap: 40px;
+    }
+
+    /* about */
+    .about-top { gap: 50px; }
 }
 
-
 @media (max-width:767px) {
-    .header_wrapper {
-        padding: 10px 30px;
+
+    /* Support ----------------------- */
+    .support {
+        right: 25px;
+        bottom: 25px;
     }
-    .logo img {
-        height: 40px;
-        width: auto;
+
+    /* nav ---------------------- */
+    /* nav-logo */
+    .nav-logo img {
+        width: 40px;
     }
+    .nav-logo .nav-text {
+        font-size: 12px;
+    }
+
+    /* nav links */
     .menu-button {
         display: inline-block;
     }
-    .nav ul {
-        flex-direction: column;
-        text-align: center;
-    }
-    .link-wrapper {
+    .nav-links-section {
+        z-index: 100;
         display: none;
-        z-index: 1000;
     }
-    .link-wrapper.menu-open {
+    .nav-links-section.open-menu {
+        padding: 0;
+        height: 100px;
         position: absolute;
-        top: 150px;
-        left: 80px;
-        right: 80px;
-        height: 300px;
-        background-color: #011638;
-        border-radius: 30px;
-        align-items: center;
+        top: 85px;
+        left: 20px;
+        right: 20px;
+
+        display: inline-block;
+    }
+    .nav-links-section ul {
+        width: 100%;
+
+        background: rgba( 255, 255, 255, 0.25 );
+        box-shadow: 0 8px 32px 0 rgba(20, 25, 84, 0.438);
+        backdrop-filter: blur( 8px );
+        -webkit-backdrop-filter: blur( 4px );
+        border: 1px solid rgba( 255, 255, 255, 0.18 );
+        border-radius: 20px;
+
         display: flex;
         justify-content: center;
+        align-items: center;
+        gap: 50px;
+    }
+    .nav-links-section ul li a:any-link {
+        color: var(--dark);
+        font-weight: var(--fw-l);
+        font-size: 1.2rem;
     }
 
-    .support {
-        right: 20px;
+    /* hero section ----------------------- */
+    .hero-text-top {
+        align-items: center;
+    }
+    .glow {
+        font-size: 4rem;
+    }
+    .hero-container .hero-title {
+        font-size: 3rem;
+    }
+    .hero-subtitle {
+        font-size: 0.7rem;
+    }
+    .hero-container .hero-description {
+        font-size: var(--fs-xs);
     }
 
-    /* hero section */
-    .hero-section {
-        padding: 5rem 0 0;
-    }
-    .hero-top {
-        width: 80%;
-    }
-    .hero-top .hero-large-text {
-        letter-spacing: -2px;
-        line-height: 1.1;
-    }
-    .hero-top .hero-small-text {
-        line-height: 0.75;
-    }
-    .hero-top .hero-sub-text {
-        font-size: 14px;
-    }
-    .hero-top .hero-description {
-        font-size: 10px;
-        width: 100%;
-        padding: 1rem 0 0;
-    }
-
-    /* section-2 */
-    .section-2 {
-        padding: 1rem 0;
-    }
-    .section-2 .section-2-title {
-        font-size: var(--fs-m);
-    }
-    .section-2 .container {
-        padding: 0 1rem;
-    }
-
-    /* reviews section */
-    .review-card {
+    .hero-bottom {
         flex-direction: column;
-        padding: 3rem;
     }
-    .reviews-bottom {
+
+    /* section #2 ------------------------ */
+    .section-2-img-container {
+        flex-direction: column;
+        gap: 65px;
+    }
+    .section-2-img-container > img {
         width: 80%;
     }
-    .review-card-pfp img {
-        margin: 0;
+
+    /* section #3 -------------------------- */
+    .section-3 {gap: 20px;}
+    .section-3 .box-title {font-size: 1.2rem;}
+    .section-3-box .box-title i {font-size: 1.2rem;}
+
+    /* section #4 ------------------------ */
+    .section-4 {flex-direction: column; gap:10px;}
+    .section-4 ul {
+        width: 340px;
+        font-size: 1.4rem;
     }
-    .user-review {
-        text-align: center;
+    .section-4 .list-1 li {justify-content: flex-start;}
+    .section-4 .list-1 i {order: 0;}
+
+    /* about section ----------------------- */
+    .about-top, .about-bottom {
+        padding: rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+        width: 100%;
+    }
+    .about-text {
+        width: 100%;
+    }
+    .about-img {
+        height: 350px;
+        width: 300px;
+    }
+    .about-top .about-img1 {
+        order: -1;
     }
 }
 
+
 @media (max-width:450px) {
-    .link-wrapper.menu-open {
+
+    /* nav ---------------------- */
+    /* nav links */
+    .nav-links-section.open-menu {
+        height: 400px;
+        top: 100px;
         left: 40px;
         right: 40px;
     }
-
-    /* hero section */
-    .hero-top {
-        width: 95%;
+    .nav-links-section ul {
+        flex-direction: column;
+        gap: 40px;
     }
-    .hero-top .hero-large-text {
-        font-size: 3rem;
+    .nav-links-section ul li {
+        font-size: var(--fs-s);
+    }
+    .nav-links-section li a, .nav-links-section li a:any-link {
+        font-size: 1.2rem;
+    }
+
+    /* hero section ------------------- */
+    .hero-text-top {
+        margin-top: 2rem;
+    }
+    .glow {
+        font-size: 3rem
+    }
+    .hero-container .hero-subtitle {
+        font-size: 1rem;
+        background: none;
+        border: none;
+        box-shadow: none;
     }
     .trustpoilt {
         width: 80%;
     }
-    .hero-section .hero-bottom {
-        width: 90%;
+
+    /* section #3 -------------------- */
+    .section-3-box .box-title i {
+        margin: 0 0.5rem;
     }
 
-    /* reviews section */
-    .reviews-bottom {
-        width: 90%;
+    /* section #4 ------------------------ */
+    .section-4 ul {
+        width: 280px;
+        font-size: 1.25rem;
     }
-    .review-card {
-        padding: 1rem;
+    
+    /* about ------------------------- */
+    .about-img {
+        height: 300px;
+        width: 250px;
     }
 }
