--- a/styles/home.css
+++ b/styles/home.css
@@ -8,7 +8,7 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    
+    position: relative;
 }
 
 
@@ -97,6 +97,7 @@ nav {
 
 /* || hero section ------------------------------------ */
 .hero-container {
+    border: 1px solid gold;
     color: var(--white);
     text-transform: uppercase;
     height: 89.5%;
@@ -108,7 +109,7 @@ nav {
     justify-content: center;
     align-items: flex-end;
     
-    position: relative;
+    /* position: relative; */
     overflow: hidden;
 }
 .hero-container .hero-text-wrapper {
@@ -215,7 +216,7 @@ nav {
     background: linear-gradient(0deg, rgba(7,21,70,1) 8%, rgba(255,255,255,0) 100%);
 
     position: absolute;
-    bottom: -2px;
+    bottom: 0;
 }
 
 
